force-app/main/default/objects/ProjectAddEditViewCustomSettings__c/ProjectAddEditViewCustomSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom settings stores list of editable fields on the ProjectAddEditView page</description>
    <label>ProjectAddEditViewCustomSettings</label>
</CustomObject>