force-app/main/default/objects/ProjectAddEditViewCustomSettings__c/fields/FieldList__c.field-meta.xml
<CustomField>
    <fullName>FieldList__c</fullName>
    <inlineHelpText>List of fields comma separated that are editable on the page.</inlineHelpText>
    <label>FieldList</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>