force-app/main/default/objects/ProjectAddEditViewCustomSettings__c/fields/ProjectType__c.field-meta.xml
<CustomField>
    <fullName>ProjectType__c</fullName>
    <inlineHelpText>project type</inlineHelpText>
    <label>ProjectType</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>