force-app/main/default/objects/ProjectAddEditViewCustomSettings__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>project status</inlineHelpText>
    <label>Status</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>